contact reservation, vendor.css, app.js

--- a/plugins/milo/contact/views/mail/message.htm
+++ b/plugins/milo/contact/views/mail/message.htm
@@ -15,6 +15,10 @@ layout = "laurel-leaf"
 
             <!-- content -->
             <div class="content">
+                <div style="text-align: center;">
+                    <a href="http://www.laurel-leaf.at"><img src="http://piveb.com/laurel-leaf-2017/themes/laurel-leaf/assets/images/logo-laurel-leaf.png" alt="Laurel Leaf Irish Pub Vienna"></a>
+                </div>
+                <br>
                 <table>
                     <tr>
                         <td>
@@ -36,14 +40,6 @@ layout = "laurel-leaf"
                                     <td><strong>{{ nachricht }}</strong></td>
                                 </tr>
                             </table>
-
-                            <p>
-                                Laurel Leaf Irish Pub Vienna <br>
-                                Theobaldgasse 15 <br>
-                                A-1060 Wien <br>
-                                T: +43 1 585 68 65
-                            </p>
-
                         </td>
                     </tr>
                 </table>
@@ -56,27 +52,4 @@ layout = "laurel-leaf"
 </table>
 <!-- /body -->
 
-<!-- footer -->
-<table class="footer-wrap">
-    <tr>
-        <td></td>
-        <td class="container">
-
-            <!-- content -->
-            <div class="content">
-                <table>
-                    <tr>
-                        <td align="center">
-                            <p><a href="http://www.laurel-leaf.at">&copy;2017 Laurel Leaf Irish Pub</a></p>
-                        </td>
-                    </tr>
-                </table>
-            </div>
-            <!-- /content -->
-
-        </td>
-        <td></td>
-    </tr>
-</table>
-<!-- /footer -->
 
