--- a/plugins/milo/contact/components/contactform/default.htm
+++ b/plugins/milo/contact/components/contactform/default.htm
@@ -1,5 +1,7 @@
 {{ form_open({ request: 'onSubmitContactForm', files: true }) }}
 
+    <legend>Schreib uns eine Nachricht:</legend>
+
     <div class="form-group required">
         <label for="name">
             Name
@@ -36,8 +38,11 @@
     </div>
 
     <div class="form-group">
-    	<label>File Upload:</label>
-    	<input type="file" name="file">
+    	<label for="file-upload" class="custom-file-upload">
+            <i class="icon-cloud-upload"></i> File Upload
+        </label>
+        <span id="file-selected"></span>
+    	<input id="file-upload" type="file" name="file">
     	<p style="color:red;">{{ errors.first('file') }}</p>
     </div>
 
