--- a/plugins/milo/reservation/components/reservationform/default.htm
+++ b/plugins/milo/reservation/components/reservationform/default.htm
@@ -1,3 +1,91 @@
-<p>This is the default markup for component Form</p>
+<form
+        action="reservation"
+        method="POST"
+        id="reservationForm"
+        data-request="onSend"
+        data-request-validate
+        data-request-flash>
 
-<small>You can delete this file if you want</small>
+
+    <div class="row">
+        <div class="col-sm-6">
+            <div class="form-group required">
+                <label for="date" class="required">Datum</label>
+                <input type='date' name="date" value="{{ form_value('date') }}" class="form-control" required/>
+                <p class="help-block">Format tt.mm.jjjj - z.B. <strong>{{ "now"|date("d.m.Y") }}</strong></p>
+                <div data-validate-for="date"></div>
+            </div>
+        </div>
+        <div class="col-sm-6">
+            <div class="form-group required">
+                <label for="time" class="required">Zeit</label>
+                <input type='time' name="time" value="{{ form_value('time') }}" class="form-control" required/>
+                <p class="help-block">Format hh:ii - z.B. <strong>18:00</strong></p>
+                <div data-validate-for="time">Sorry aber wir akzeptieren keine Reservierungen nach 20:00!</div>
+            </div>
+        </div>
+    </div>
+        
+    <div class="row">
+        <div class="col-sm-6">
+            <div class="form-group required">
+                <label for="name" class="required">Dein Name</label>
+                <input type="text" name="name" value="{{ form_value('name') }}" class="form-control" required/>
+                <div data-validate-for="name"></div>
+            </div>
+        </div>
+        <div class="col-sm-6">
+            <div class="form-group required">
+                <label for="email" class="required">Deine E-Mail</label>
+                <input type="text" name="email" value="{{ form_value('email') }}" class="form-control" required/>
+                <div data-validate-for="email"></div>
+            </div>
+        </div>
+    </div>
+
+    <div class="row">
+        <div class="col-sm-6">
+            <div class="form-group required">
+                <label for="people" class="required">Wieviele Personen?</label>
+                <input type="number" name="people" min="1" max="10" class="form-control" required/>
+                <div data-validate-for="people"></div>
+            </div>
+        </div>
+        <div class="col-sm-6">
+            <label for="smoker">Bereich</label>
+            <div class="radio">
+                <label>
+                    <input type="radio" name="smoker" value="nonsmoker" {% if form_value('smoker') == "nonsmoker" %} checked {% endif %}>
+                    Nichtraucher Bereich
+                </label>
+            </div>
+            <div class="radio">
+                <label>
+                    <input type="radio" name="smoker" value="smoker" {% if form_value('smoker') == "smoker" %} checked {% endif %}>
+                    Raucher Bereich
+                </label>
+                <p class="help-block">Wenn hier keine Angabe gemacht wird, wird ein beliebiger Bereich zugeteilt.
+                </p>
+            </div>
+        </div>
+    </div>
+
+    <div class="antispam">Leave this empty:
+        <input type="text" name="url">
+    </div>
+
+    <div class="form-group">
+        {{ form_label('message', 'Nachricht') }}
+        <textarea class="form-control" name="sometext" rows="3">{{ form_value('sometext') }}</textarea>
+    </div>
+
+    <div class="form-group">
+        <button
+                id="submit"
+                type="submit"
+                class="btn btn-info">
+            Absenden
+        </button>
+    </div>
+
+</form>
