heroimage, reservation, home

--- a/plugins/milo/reservation/components/reservationform/default.htm
+++ b/plugins/milo/reservation/components/reservationform/default.htm
@@ -6,6 +6,7 @@
         data-request-validate
         data-request-flash>
 
+    <legend>Tisch Reservierung</legend>
 
     <div class="row">
         <div class="col-sm-6">
