mail template contact

--- a/plugins/milo/contact/views/mail/message.htm
+++ b/plugins/milo/contact/views/mail/message.htm
@@ -35,11 +35,9 @@ layout = "laurel-leaf"
                                     <td>Betreff:</td>
                                     <td><strong>{{ subject }}</strong></td>
                                 </tr>
-                                <tr>
-                                    <td>Nachricht:</td>
-                                    <td><strong>{{ nachricht }}</strong></td>
-                                </tr>
                             </table>
+                            <br>
+                            <p>{{ nachricht }}</p>
                         </td>
                     </tr>
                 </table>
