reservation mail logo and text, backend update record

--- a/plugins/milo/contact/views/mail/message.htm
+++ b/plugins/milo/contact/views/mail/message.htm
@@ -16,7 +16,7 @@ layout = "laurel-leaf"
             <!-- content -->
             <div class="content">
                 <div style="text-align: center;">
-                    <a href="http://www.laurel-leaf.at"><img src="http://piveb.com/laurel-leaf-2017/themes/laurel-leaf/assets/images/logo-ll-mail.png" alt="Laurel Leaf Irish Pub Vienna"></a>
+                    <a href="http://www.laurel-leaf.at"><img src="https://laurel-leaf.at/themes/laurel-leaf/assets/images/logo-ll-mail.png" alt="Laurel Leaf Irish Pub Vienna"></a>
                 </div>
                 <br>
                 <table>
