--- a/themes/laurel-leaf/assets/css/laurelleaf.css
+++ b/themes/laurel-leaf/assets/css/laurelleaf.css
@@ -507,9 +507,20 @@ h3.menue-header + hr{
     transform: rotate(2deg);
     margin-top: -9px;
     box-shadow: 2px 2px 6px black;
-    width: 340px;
     margin-top: 20px;
     box-shadow: 2px 2px 6px black;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.img-rotate-up-2 {
+    transform: rotate(-2deg);
+    margin-top: -9px;
+    box-shadow: 2px 2px 6px black;
+    margin-top: 20px;
+    box-shadow: 2px 2px 6px black;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .image-row {
