food menu aktualisiert, dabei fehlerhafte darstellung korrigiert, die queries angepasst

--- a/themes/laurel-leaf/partials/site/food/foodwrapper.htm
+++ b/themes/laurel-leaf/partials/site/food/foodwrapper.htm
@@ -4,7 +4,8 @@
 
         {% set foodCategory = '' %}
 
-        {% for chunked in foods.chunk(13) %}
+        {# hier die Darstellung in Vollbildansicht anpassen (wieviele Speisen pro Spalte) #}
+        {% for chunked in foods.chunk(19) %}
 
             <div class="col-sm-6 col-md-4">
 
