--- a/themes/laurel-leaf/layouts/default.htm
+++ b/themes/laurel-leaf/layouts/default.htm
@@ -32,7 +32,7 @@ theme = "dark-bottom"
         'assets/vendor/jquery-nice-select-1.1.0/css/nice-select.css',
         'assets/css/theme.css'
         ]|theme }}" rel="stylesheet">
-        <link href="{{ 'assets/css/laurelleaf.css'|theme }}" rel="stylesheet">
+        <link href="{{ 'assets/css/laurelleaf.css?v1.2'|theme }}" rel="stylesheet">
 
         {% styles %}
         {% component 'cookieConsent' %}
