added extensions .js and .css to assets to gzip them

--- a/themes/laurel-leaf/layouts/default.htm
+++ b/themes/laurel-leaf/layouts/default.htm
@@ -31,8 +31,8 @@ theme = "dark-bottom"
         'assets/vendor/fancybox/jquery.fancybox.css',
         'assets/vendor/jquery-nice-select-1.1.0/css/nice-select.css',
         'assets/css/theme.css'
-        ]|theme }}" rel="stylesheet">
-        <link href="{{ 'assets/css/laurelleaf.css?v1.2'|theme }}" rel="stylesheet">
+        ]|theme }}.css" rel="stylesheet">
+        <link href="{{ 'assets/css/laurelleaf.css?v1.2'|theme }}.css" rel="stylesheet">
 
         {% styles %}
         {% component 'cookieConsent' %}
@@ -73,7 +73,7 @@ theme = "dark-bottom"
         'assets/vendor/fancybox/jquery.fancybox.js',
         'assets/vendor/bootstrap.js',
         'assets/javascript/app.js'
-        ]|theme }}">
+        ]|theme }}.js">
         </script>
         {% framework extras %}
         {% scripts %}
