--- a/themes/laurel-leaf/partials/site/header.htm
+++ b/themes/laurel-leaf/partials/site/header.htm
@@ -5,7 +5,12 @@
     <div class="subheader hidden-xs">
         <div class="container">
             <div class="row">
-                <div class="col-sm-12">
+                <div class="col-sm-6 text-left">
+                    <a href="/contact-reservation" style="color: white;">
+                        <i class="icon-star"></i> WEIHNACHTS ÖFFNUNGSZEITEN <i class="icon-star"></i> 
+                    </a>
+                </div>
+                <div class="col-sm-6 text-right">
                     <ul class="list-inline">
                         <li><i class="icon-map-marker" aria-hidden="true"></i> Theobaldgasse 15, 1060 Wien</li>
                         <li><i class="icon-phone" aria-hidden="true"></i> +43 1 585 68 65</li>
