impressum, datenschutzerklärung hinzugefügt

--- a/themes/laurel-leaf/partials/site/footer.htm
+++ b/themes/laurel-leaf/partials/site/footer.htm
@@ -1,8 +1,8 @@
 <div id="footer">
-    <div class="container ptb15">
+    <div class="container ptb15 text-center">
 		<hr>
         <p class="muted credit">
-        	&copy; 2009 - {{ "now"|date("Y") }} Laurel Leaf Irish Pub Vienna
+        	&copy; 2009 - {{ "now"|date("Y") }} Laurel Leaf Irish Pub Vienna | <a href="/impressum">Impressum</a> | <a href="/datenschutzerklaerung">Datenschutzerklärung</a>
         </p>
 
     </div>
