--- a/themes/laurel-leaf/partials/site/contact.htm
+++ b/themes/laurel-leaf/partials/site/contact.htm
@@ -29,6 +29,25 @@
         <i class="icon-clock-o icon-2x"></i> 
     </div>
     <div class="col-xs-10 col-sm-11">
+        <strong>abweichende Öffnungszeiten Weihnachten 2018/19</strong><br>
+        <div class="table-responsive">
+            <table class="table table-hover">
+                <tbody>
+                    <tr>
+                        <td>Montag, 24.12.</td>
+                        <td>geschlossen</td>
+                    </tr>
+                    <tr>
+                        <td>Montag, 31.12.</td>
+                        <td>Silvesterparty, geöffnet ab 19:00</td>
+                    </tr>
+                    <tr>
+                        <td>Dienstag, 1.1.2019</td>
+                        <td>geschlossen</td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
         <strong>Öffnungszeiten</strong><br>
         <div class="table-responsive">
             <table class="table table-hover">
