removed christmas opening hours

--- a/themes/laurel-leaf/partials/site/contact.htm
+++ b/themes/laurel-leaf/partials/site/contact.htm
@@ -29,7 +29,7 @@
         <i class="icon-clock-o icon-2x"></i> 
     </div>
     <div class="col-xs-10 col-sm-11">
-        <strong>abweichende Öffnungszeiten Weihnachten 2018/19</strong><br>
+        {# <strong>abweichende Öffnungszeiten Weihnachten 2018/19</strong><br>
         <div class="table-responsive">
             <table class="table table-hover">
                 <tbody>
@@ -47,7 +47,7 @@
                     </tr>
                 </tbody>
             </table>
-        </div>
+        </div> #}
         <strong>Öffnungszeiten</strong><br>
         <div class="table-responsive">
             <table class="table table-hover">
