firstday lunchoffer, opening hours

--- a/themes/laurel-leaf/partials/site/contact.htm
+++ b/themes/laurel-leaf/partials/site/contact.htm
@@ -53,11 +53,11 @@
             <table class="table table-hover">
                 <tbody>
                     <tr>
-                        <td>Montag - Donnerstag</td>
+                        <td>Montag, Dienstag</td>
                         <td>11.00 - 01.00</td>
                     </tr>
                     <tr>
-                        <td>Freitag, Samstag</td>
+                        <td>Mittwoch - Samstag</td>
                         <td>11.00 - 03.00</td>
                     </tr>
                     <tr>
