--- a/themes/laurel-leaf/partials/site/contact.htm
+++ b/themes/laurel-leaf/partials/site/contact.htm
@@ -57,8 +57,12 @@
                         <td>11.00 - 01.00</td>
                     </tr>
                     <tr>
-                        <td>Mittwoch - Samstag</td>
+                        <td>Mittwoch - Freitag</td>
                         <td>11.00 - 03.00</td>
+                    </tr>
+                    <tr>
+                        <td>Samstag</td>
+                        <td>17.00 - 03.00</td>
                     </tr>
                     <tr>
                         <td>Sonntag und Feiertag</td>
