--- a/themes/laurel-leaf/partials/site/contact.htm
+++ b/themes/laurel-leaf/partials/site/contact.htm
@@ -57,11 +57,7 @@
                         <td>11.00 - 01.00</td>
                     </tr>
                     <tr>
-                        <td>Mittwoch - Freitag</td>
-                        <td>11.00 - 03.00</td>
-                    </tr>
-                    <tr>
-                        <td>Samstag</td>
+                        <td>Mittwoch - Samstag</td>
                         <td>11.00 - 03.00</td>
                     </tr>
                     <tr>
