--- a/themes/laurel-leaf/partials/site/contact.htm
+++ b/themes/laurel-leaf/partials/site/contact.htm
@@ -1,3 +1,4 @@
+==
 <div class="row">
     <div class="col-xs-2 col-sm-1">
         <i class="icon-map-marker icon-2x"></i> 
@@ -70,9 +71,9 @@
     </div>
 </div>
 
-<!-- Christmas Opening Hours Start -->
+{# Christmas Opening Hours Start #}
 
-{# <div class="row">
+<div class="row">
     <div class="col-xs-2 col-sm-1">
         <i class="icon-star icon-2x"></i> 
     </div>
@@ -82,26 +83,23 @@
             <table class="table table-hover">
                 <tbody>
                     <tr>
-                        <td>24.12.</td>
-                        <td>ab 20:00 <strong>Christmas Party</strong></td>
+                        <td>24.12.2019</td>
+                        <td><strong>geschlossen</strong></td>
                     </tr>
                     <tr>
-                        <td>25. & 26.12.</td>
-                        <td>ab 17:00</td>
+                        <td>31.12.2019</td>
+                        <td>ab 19:00 <strong>Silvesterparty</strong></td>
                     </tr>
                     <tr>
-                        <td>31.12.</td>
-                        <td>ab 19:00 <strong>(nur mit Reservierung)</strong></td>
-                    </tr>
-                    <tr>
-                        <td>1.1.18</td>
-                        <td>geschlossen</td>
+                        <td>1.1.2020</td>
+                        <td><strong>geschlossen</td>
                     </tr>
                 </tbody>
             </table>
         </div>
     </div>
-</div> #} <!-- End Christmas Opening Hours -->
+</div> 
+{# End Christmas Opening Hours #}
 
 <br>
 
