--- a/themes/laurel-leaf/partials/site/header.htm
+++ b/themes/laurel-leaf/partials/site/header.htm
@@ -1,3 +1,4 @@
+==
 <!-- Nav -->
 <nav id="layout-nav" class="navbar navbar-inverse navbar-fixed-top navbar-autohide" role="navigation">
 
@@ -5,12 +6,12 @@
     <div class="subheader hidden-xs">
         <div class="container">
             <div class="row">
-               <div class="col-sm-6 text-left">
+               <div class="col-sm-8 text-left">
                     <a href="/contact-reservation" style="color: white;">
-                        <i class="icon-star"></i>Aktueller Hinweis: Ab 1. November 2019 ist das Laurel Leaf ein <strong>rauchfreies Lokal</strong>.<i class="icon-star"></i>
+                        <i class="icon-star"></i>Bitte unsere <a href="/contact-reservation" style="color: white; font-weight: bold;">leicht abweichenden Öffnungszeiten</a> zu den Weihnachtsfeiertagen beachten.<i class="icon-star"></i>
                     </a>
                 </div>
-                <div class="col-sm-6 text-right">
+                <div class="col-sm-4 text-right">
                     <ul class="list-inline">
                         <li><i class="icon-map-marker" aria-hidden="true"></i> Theobaldgasse 15, 1060 Wien</li>
                         <li><i class="icon-phone" aria-hidden="true"></i> +43 1 585 68 65</li>
