content from live version

--- a/themes/laurel-leaf/partials/site/contact.htm
+++ b/themes/laurel-leaf/partials/site/contact.htm
@@ -50,6 +50,9 @@
             </table>
         </div> #}
         <strong>Öffnungszeiten</strong><br>
+        ab 15. Mai 2020 wieder geöffnet, <br>
+        <strong>täglich von 15:00 bis 23:00</strong>
+        {#
         <div class="table-responsive">
             <table class="table table-hover">
                 <tbody>
@@ -58,21 +61,27 @@
                         <td>11.00 - 01.00</td>
                     </tr>
                     <tr>
-                        <td>Mittwoch - Samstag</td>
+                        <td>Mittwoch - Freitag</td>
                         <td>11.00 - 03.00</td>
                     </tr>
                     <tr>
-                        <td>Sonntag und Feiertag</td>
-                        <td>17.00 - 00.00</td>
+                        <td>Samstag</td>
+                        <td>15.00 - 03.00</td>
+                    </tr>
+                    <tr>
+                        <td>Sonn- & Feiertag</td>
+                        <td>15.00 - 00.00</td>
                     </tr>
                 </tbody>
             </table>
         </div>
+        #}
     </div>
 </div>
 
 {# Christmas Opening Hours Start #}
 
+{#
 <div class="row">
     <div class="col-xs-2 col-sm-1">
         <i class="icon-star icon-2x"></i> 
@@ -99,6 +108,7 @@
         </div>
     </div>
 </div> 
+#}
 {# End Christmas Opening Hours #}
 
 <br>
