--- a/themes/laurel-leaf/partials/site/header.htm
+++ b/themes/laurel-leaf/partials/site/header.htm
@@ -6,12 +6,15 @@
     <div class="subheader hidden-xs">
         <div class="container">
             <div class="row">
-               <div class="col-sm-8 text-left">
+                {#
+                <div class="col-sm-8 text-left">
                     <a href="/contact-reservation" style="color: white;">
-                        <i class="icon-star"></i>Bitte unsere <a href="/contact-reservation" style="color: white; font-weight: bold;">leicht abweichenden Öffnungszeiten</a> zu den Weihnachtsfeiertagen beachten.<i class="icon-star"></i>
+                        <i class="icon-star"></i>Bitte unsere <a href="/contact-reservation" style="color: white; font-weight: bold;">neuen Öffnungszeiten</a> Samstag und Sonntag beachten.<i class="icon-star"></i>
                     </a>
                 </div>
-                <div class="col-sm-4 text-right">
+                #}
+                
+                <div class="col-sm-12 text-right">
                     <ul class="list-inline">
                         <li><i class="icon-map-marker" aria-hidden="true"></i> Theobaldgasse 15, 1060 Wien</li>
                         <li><i class="icon-phone" aria-hidden="true"></i> +43 1 585 68 65</li>
@@ -57,4 +60,5 @@
             </ul>
         </div>
     </div>
+    
 </nav>
